--- a/signin.html
+++ b/signin.html
@@ -33,33 +33,34 @@
     <link href="https://getbootstrap.com/signin.css" rel="stylesheet">
   </head>
 
-  <body class="text-center"> 
+  <body class="text-center" style="background-color: rgb(243, 243, 243)"> 
     <main class="form-signin">
-      <div class="container" >
-        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-          <div class="card border-0 shadow rounded-3 my-5">
-            <div class="card-body p-4 p-sm-5">
-              <form>
-                <img class="mb-0" src="https://www.bedfordpumps.co.uk/assets/images/bedford-pumps-logo.svg" alt="" width="300" height="300">
-                <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-                <div class="form-floating">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                  <label for="floatingInput">Email address</label>
-                </div>
-                <div class="form-floating">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                  <label for="floatingPassword">Password</label>
-                </div>
-
-                <div class="checkbox mb-3">
-                  <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                  </label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-muted">© 2021</p>
-              </form>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card shadow rounded-3  my-5">
+              <div class="card-body p-4 p-sm-5">
+                <form>
+                  <img class="mb-0" src="https://www.bedfordpumps.co.uk/assets/images/bedford-pumps-logo.svg" alt="" width="300" height="300">
+                  <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+                  <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" aria-describedby="emailHelp">
+                    <label for="floatingInput">Email address</label>
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  </div>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+                  <div class="checkbox my-3">
+                    <label>
+                      <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                  </div>
+                  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                  <p class="mt-5 mb-3 text-muted">© 2021</p>
+                </form>
+              </div>
             </div>
           </div>
         </div>
